--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -10,7 +10,9 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
+<?import javafx.scene.control.Label?>
 <fx:root type="javafx.stage.Stage" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
          title="Address App" minWidth="450" minHeight="600" onCloseRequest="#handleExit">
   <icons>
@@ -46,13 +48,19 @@
           </padding>
         </StackPane>
 
-        <VBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340" VBox.vgrow="ALWAYS">
+        <HBox fx:id="personList" styleClass="pane-with-border" minWidth="340" prefWidth="340">
           <padding>
             <Insets top="10" right="10" bottom="10" left="10" />
           </padding>
-          <StackPane fx:id="buyerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-          <StackPane fx:id="sellerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
-        </VBox>
+          <VBox HBox.hgrow="ALWAYS" alignment="CENTER" style="-fx-border-color: #8FFFA1;">
+            <Label fx:id="buyers" text="Buyers" style="-fx-text-fill: #8FFFA1; -fx-font-weight: bold; -fx-font-style: italics;"/>
+            <StackPane fx:id="buyerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+          </VBox>
+          <VBox HBox.hgrow="ALWAYS" alignment="CENTER" style="-fx-border-color: yellow;">
+            <Label fx:id="sellers" text="Sellers" style="-fx-text-fill: yellow; -fx-font-weight: bold; -fx-font-style: italics;"/>
+            <StackPane fx:id="sellerListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+          </VBox>
+        </HBox>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER" />
       </VBox>
